# active-trace

./: .gitignore  .jr-orchestrator-state.json  AGENTS.md  CHANGES.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.md  test.db
.engram/: manifest.json
alembic/versions/: 0a1b2c3d4e5f_add_comunicaciones_tables.py  0b1b2c3d4e5f_add_encuentros_y_guardias.py  0d1b2c3d4e5f_add_avisos_y_acknowledgments.py  1e2f3c4d5e6f_add_tareas_y_comentarios.py  83e6f390883b_add_audit_logs_table.py  8a1b2c3d4e5f_add_padron_tables.py  (+2 more)
app/: main.py
docs/: ARQUITECTURA.md
frontend/: package-lock.json
migrations/: env.py
tests/: conftest.py  test_2fa_endpoints.py  test_2fa_logic.py  test_alembic_setup.py  test_analisis.py  test_auditoria_router.py  test_auth_endpoints.py  test_auth_flow.py  test_auth_jwt.py  test_aviso_model.py  test_aviso_repo.py  test_aviso_service.py  test_avisos_router.py  test_calificaciones.py  test_carrera_repo.py  test_coloquio_model.py  test_coloquio_repos.py  test_coloquio_routers.py  test_coloquio_schemas.py  test_coloquio_services.py  test_comunicacion_model.py  test_comunicaciones.py  test_database.py  test_encuentro_model.py  test_encuentro_repos.py  test_encuentro_routers.py  test_encuentro_schemas.py  test_encuentro_services.py  test_equipos_routers.py  test_equipos_schemas.py  test_equipos_services.py  test_fecha_academica_model.py  test_fecha_academica_repo.py  test_fecha_academica_service.py  test_fechas_academicas_router.py  test_health.py  test_inbox_router.py  test_liquidaciones.py  test_migration.py  test_models.py  (+27 more)
(+291 files in other folders)
