[tool.poetry]
name = "active-trace"
version = "0.1.0"
description = "activia-trace — plataforma de gestión académica y trazabilidad multi-tenant"
authors = ["PC <rexdaro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
pydantic = "^2.10"
pydantic-settings = "^2.7"
email-validator = "^2.2"
sqlalchemy = "^2.0"
asyncpg = "^0.30"
alembic = "^1.14"
python-jose = {extras = ["cryptography"], version = "^3.3"}
cryptography = "^44.0"
pyotp = "^2.9"
python-multipart = "^0.0.20"
openpyxl = "^3.1"
jinja2 = "^3.1"
bcrypt = "^4.2"
httpx = "^0.28"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.extras]
otel = ["opentelemetry-api", "opentelemetry-instrumentation-fastapi"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
